--- a/index.html
+++ b/index.html
@@ -24,18 +24,28 @@
         <div class="logo"><i class="fa-solid fa-circle"></i> YemHero</div>
         <div class="menu">
           <ul>
-            <li>Our Hotel</li>
-            <li>Rooms</li>
-            <li>Offers</li>
-            <li>Meetings & Events</li>
+            <li><a href="#">Our Hotel</a></li>
+            <li><a href="#">Rooms</a></li>
+            <li><a href="#">Offers</a></li>
+            <li><a href="#">Meetings & Events</a></li>
           </ul>
         </div>
         <button class="reservation-btn">Reservation</button>
       </div>
     </header>
     <div class="heroSec">
-      <div class="leftHero"></div>
-      <div class="rightHero"></div>
+      <div class="leftHero">
+        <div class="heroText">
+          <p class="leftText">Comfort.</p>
+          <p class="leftText">Luxury.</p>
+          <p class="leftText">Affordable.</p>
+        </div>
+        <p class="small-t">Design your life style with new trends</p>
+      </div>
+
+      <div class="rightHero">
+        <img src="image/resort.jpg" alt="" class="resort-img" />
+      </div>
     </div>
   </body>
 </html>
